@@ -148,7 +148,7 @@ qpdf_init()
 {
     QTC::TC("qpdf", "qpdf-c called qpdf_init");
     qpdf_data qpdf = new _qpdf_data();
-    qpdf->qpdf = std::make_shared<QPDF>();
+    qpdf->qpdf = QPDF::create();
     return qpdf;
 }
 
